tests/snapshots/run_wpt_conformance__litert_reduceMean_float32_4D_tensor_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_mean.https.any.js",
    "reduceMean float32 4D tensor options.keepDimensions=true",
    "litert",
    "PASS",
)
