tests/snapshots/run_wpt_conformance__litert_reduceMin_float16_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float16 0D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceMin { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f16[];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
