tests/snapshots/run_wpt_conformance__litert_reduceMin_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float16 1D constant tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceMin { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([88, 211, 127, 213, 98, 212, 180, 210, 240, 208, 200, 84, 173, 204, 153, 81, 173, 79, 175, 83, 221, 84, 184, 210, 238, 207, 222, 200, 223, 84, 48, 86, 150, 84, 193, 85, 109, 211, 71, 213, 190, 84, 0, 86, 255, 210, 42, 191]);
  }

  nodes {
    [reduceMinOutput] = reduceMin(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
